// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TemplatesList creates a form for the 'Import' special item 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectedListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "250px",
          "position": "relative",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#FFF",
              "fontSize": "16px",
              "fontWeight": "300",
              "height": "180px",
              "lineHeight": "1.6",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "background-color": "#f5f5f5",
                "height": "180px",
                "padding-top": "30px",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <form>
              <div
                className="fileInput"
              >
                <i
                  className="material-icons"
                >
                  cloud_upload
                </i>
                <input
                  accept={null}
                  onChange={[Function]}
                  type="file"
                />
              </div>
            </form>
          </div>
          <div
            style={
              Object {
                "background-color": "#455a64",
                "padding": "16px",
              }
            }
          >
            <b>
              Import
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList marks an item as selected 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectableListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "250px",
          "position": "relative",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#FFF",
              "fontSize": "16px",
              "fontWeight": "300",
              "height": "180px",
              "lineHeight": "1.6",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "background-color": "#f5f5f5",
                "height": "180px",
                "padding-top": "30px",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="template 1"
              src="./images/robots/robot-0.svg"
              style={
                Object {
                  "-ms-transform": "translate(-50%, -50%)",
                  "left": "50%",
                  "margin": "0",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                  "width": "80px",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background-color": "#455a64",
                "padding": "16px",
              }
            }
          >
            <b>
              template 1
            </b>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mdl-shadow--2dp selectedListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "250px",
          "position": "relative",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#FFF",
              "fontSize": "16px",
              "fontWeight": "300",
              "height": "180px",
              "lineHeight": "1.6",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "background-color": "#f5f5f5",
                "height": "180px",
                "padding-top": "30px",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="template 2"
              src="./images/robots/robot-1.svg"
              style={
                Object {
                  "-ms-transform": "translate(-50%, -50%)",
                  "left": "50%",
                  "margin": "0",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                  "width": "80px",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background-color": "#455a64",
                "padding": "16px",
              }
            }
          >
            <b>
              template 2
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList renders correctly 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  />
</div>
`;

exports[`components/TemplatesList renders some items 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectedListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "250px",
          "position": "relative",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#FFF",
              "fontSize": "16px",
              "fontWeight": "300",
              "height": "180px",
              "lineHeight": "1.6",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "background-color": "#f5f5f5",
                "height": "180px",
                "padding-top": "30px",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="template 1"
              src="./images/robots/robot-0.svg"
              style={
                Object {
                  "-ms-transform": "translate(-50%, -50%)",
                  "left": "50%",
                  "margin": "0",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                  "width": "80px",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background-color": "#455a64",
                "padding": "16px",
              }
            }
          >
            <b>
              template 1
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/TemplatesList renders without selected template 1`] = `
<div
  className="mdc-layout-grid"
>
  <div
    className="mdc-layout-grid__inner"
  >
    <div
      className="mdl-shadow--2dp selectableListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "250px",
          "position": "relative",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#FFF",
              "fontSize": "16px",
              "fontWeight": "300",
              "height": "180px",
              "lineHeight": "1.6",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "background-color": "#f5f5f5",
                "height": "180px",
                "padding-top": "30px",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Template 1"
              src="./images/robots/robot-0.svg"
              style={
                Object {
                  "-ms-transform": "translate(-50%, -50%)",
                  "left": "50%",
                  "margin": "0",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                  "width": "80px",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background-color": "#455a64",
                "padding": "16px",
              }
            }
          >
            <b>
              Template 1
            </b>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mdl-shadow--2dp selectableListItem mdc-layout-grid__cell mdc-layout-grid__cell--span-2"
      style={
        Object {
          "height": "250px",
          "position": "relative",
        }
      }
    >
      <div
        onClick={[Function]}
        role="presentation"
        style={
          Object {
            "textDecoration": "none",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": "#FFF",
              "fontSize": "16px",
              "fontWeight": "300",
              "height": "180px",
              "lineHeight": "1.6",
              "position": "relative",
            }
          }
        >
          <div
            style={
              Object {
                "background-color": "#f5f5f5",
                "height": "180px",
                "padding-top": "30px",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            <img
              alt="Template 2"
              src="./images/robots/robot-1.svg"
              style={
                Object {
                  "-ms-transform": "translate(-50%, -50%)",
                  "left": "50%",
                  "margin": "0",
                  "position": "absolute",
                  "top": "50%",
                  "transform": "translate(-50%, -50%)",
                  "width": "80px",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "background-color": "#455a64",
                "padding": "16px",
              }
            }
          >
            <b>
              Template 2
            </b>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
